# gtk_text_open_button

./: Cargo.toml  README.md
src/: gui.rs  main.rs
