[package]
name = "gtk_text_viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.15.5"
# gtk = { version = "*", package = "gtk4" }
# once_cell = "1.11.0"
once_cell = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# anyhow = "1.0"
# xshell = "0.2"
# dirs = "4.0"
# walkdir = "2.3"
# gobject-sys = "0.15.9"
# chrono = "0.4.18"
# [build-dependencies]
# gtk = { version = "*", package = "gtk4" }
