[package]
name = "gtk_text_open_button"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.15.5"
once_cell = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gdk = "0.15.4"